compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__hole_parameter_erlang.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 166
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: List(_)) -> Int {\n  todo\n}\n"
---
error: Unexpected type hole
  ┌─ /src/one/two.gleam:3:20
  │
3 │ pub fn one(x: List(_)) -> Int {
  │                    ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.

